<?xml version="1.0"?>
<package format="3">
  <name>turtle_draw</name>
  <version>0.0.1</version>
  <description>Draw dog contour with turtlesim</description>
  <maintainer email="you@email.com">you</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
